--- a/self.html
+++ b/self.html
@@ -35,7 +35,7 @@
         text-decoration:none;
         }
         nav li a:hover{
-        border-bottom:#85f39d 5px solid;
+        border-bottom:#85f3e4 5px solid;
         }
         html {
             height:120%;
@@ -43,7 +43,7 @@
             display:flex;
             align-items:center;
             justify-content:center;
-            background:linear-gradient(135deg,#b8e8d6,#EDC6C1);
+            background:linear-gradient(135deg,#b8e8d6,#fbffbf);
         }
         p{
             color: #729bb5d7;
@@ -119,7 +119,7 @@
                
                 <div class="container" align-items:'center'>
                     <h1>Welcome to My Personal Website!</h1>
-                    <img src="\webapp\img\P1.PNG" height="300x" width="300px" style="float: left;">
+                    <img src="\webapp\img\P2.PNG" height="300x" width="300px" style="float: left;">
                     <p>&nbsp;&nbsp;&nbsp;姓名：李紫怡</p>
                     <p>&nbsp;&nbsp;&nbsp;年龄：19</p>
                     <p>&nbsp;&nbsp;&nbsp;学院：计算机与软件工程学院</p>
